<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryColor">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@color/secondaryColor"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_tiempo_title_es"
            android:textSize="@dimen/sinsegundos_popup_letter"
            android:textColor="@color/thirdColor"
            android:padding="3dp"
            android:layout_gravity="left"
            android:layout_weight="0.90"/>

        <ImageButton
            android:id="@+id/dialogButtonOK"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/cerrar"
            android:layout_gravity="right"
            android:layout_weight="0.05"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/firstSeparator"
        android:layout_below="@+id/header"
        android:orientation="horizontal"
        android:background="@color/cardview_light_background"></LinearLayout>
    <LinearLayout
        android:id="@+id/buyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstSeparator"
        android:padding="10dp"
        android:weightSum="1">
        <TextView
            android:id="@+id/buyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_tiempo_comprar_es"
            android:textSize="@dimen/sinsegundos_popup_letter"
            android:textColor="@color/thirdColor"
            android:paddingLeft="5dp"
            android:layout_weight="0.8" />

        <ImageView
            android:id="@+id/comprarSegundos"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:src="@drawable/comprar"
            android:layout_weight="0.2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/secondSeparator"
        android:orientation="horizontal"
        android:layout_below="@+id/buyContainer"
        android:background="@color/cardview_light_background"></LinearLayout>
    <LinearLayout
        android:id="@+id/winContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/secondSeparator">
        <TextView
            android:id="@+id/keepplayingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_tiempo_jugar_es"
            android:textSize="@dimen/sinsegundos_popup_letter"
            android:textColor="@color/thirdColor"
            android:paddingLeft="5dp"
            android:layout_weight="0.8" />
        <ImageView
            android:id="@+id/ganarSegundos"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:background="@drawable/ganar"
            android:layout_weight="0.2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/thirdSeparator"
        android:orientation="horizontal"
        android:layout_below="@+id/winContainer"
        android:background="@color/cardview_light_background"></LinearLayout>
    <LinearLayout
        android:id="@+id/watchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/thirdSeparator">
        <TextView
            android:id="@+id/watchvideoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_tiempo_vervideo_es"
            android:textSize="@dimen/sinsegundos_popup_letter"
            android:textColor="@color/thirdColor"
            android:paddingLeft="5dp"
            android:layout_weight="0.8" />
        <ImageView
            android:id="@+id/watchVideo"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:background="@drawable/vervideo"
            android:layout_weight="0.2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/fourthSeparator"
        android:orientation="horizontal"
        android:layout_below="@+id/watchContainer"
        android:background="@color/cardview_light_background"></LinearLayout>

    <LinearLayout
        android:id="@+id/shareContainerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_below="@+id/fourthSeparator">

        <TextView
            android:id="@+id/shareText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sin_tiempo_compartir_es"
            android:textSize="@dimen/sinsegundos_popup_letter"
            android:textColor="@color/thirdColor"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shareContainerTitle"
        android:gravity="center"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/sharetwitterDialog"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/twittericon"/>

        <ImageView
            android:id="@+id/sharefacebookDialog"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/facebookicon"/>

        <ImageView
            android:id="@+id/sharewsapDialog"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/whatsappicon"/>
    </LinearLayout>


</RelativeLayout>